Fixed testimonials z-index slider

--- a/src/css/sass/partials/elements.scss
+++ b/src/css/sass/partials/elements.scss
@@ -724,7 +724,7 @@
 			}
 			.slick-prev {
 				left: 26px;
-				z-index: 9999;
+				z-index: 1;
 			}
 			.slick-prev:before, .slick-next:before {
 				font-size: 50px;
